# deploy-checks

./: README.md  deploy-check.sh  install.sh  pyproject.toml
Formula/: deploy-check.rb
src/deploy_check/: __init__.py  __main__.py  app.py  checks.py  templates.py
